# Prepare_SplicingPredictors

./: .gitignore  README.md  conda_environment.yaml  new_acceptor_DSSP_acceptor.fa  new_acceptor_SVM_BP_finder.fa  new_acceptor_Splice2Deep_acceptor.fa  new_donor_DSSP_donor.fa  pyproject.toml
src/: sequence_extractor.py  test_Spliceator_donor.fa  tricky_v_id.txt  utils.py  vcf_utils.py
src/BPHunter/: README.md  function.lua  get_mutation_effects.py
src/BPP/: README.md  get_mutation_effect.py
src/DSSP/: README.md  get_mutation_effect.py
src/ESEfinder/: README.md  get_mutation_effects.py
src/ESRseq/: README.md  get_mutation_effects.py  scores.tsv
src/HEXplorer/: README.md  get_mutation_effects.py  get_mutation_effects_temporary.py  hexplorer_results.csv  hexplorer_results_to_script.csv
src/MaxEntScan/: README.md  get_mutation_effect.py
src/SVM_BP_finder/: README.md  calculate_best_BP_per_intron.pl  get_mutation_effect.py
src/Splice2Deep/: README.md
src/SpliceRover/: get_mutation_effect.py  splicerover_donor_out.csv  test.csv
src/Spliceator/: README.md  spliceator_acceptor_out.csv
src/dssp/: README.md  dssp_acceptor_out.txt  dssp_donor_out.txt
src/regSNP-intron/: README.md  get_mutation_effect.py
src/splice2deep/: README.md  get_mutation_effect.py  new_donor_Splice2Deep_donor.fa  splice2deep_acceptor_preds.txt  splice2deep_donor_preds.txt
src/spliceator/: get_mutation_effect.py  new_acceptor_Spliceator_acceptor.fa
src/splicerover/: README.md  get_mutation_effect.py  new_acceptor_SpliceRover_acceptor.fa  new_donor_SpliceRover_donor.fa  (+1 more)
(+5 files in other folders)
