[build-system]
requires = ["setuptools >= 61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vcf2seq"
description = "Simple tool to generate proper input for a set of splicing-related models using VCF files"
authors = [
    {name = "Pedro Barbosa", email = "psbpedrobarbosa@gmail.com"},
]

version = "0.0.1"
readme = "README.md"
requires-python = "~=3.8"

[project.urls]
homepage = "https://github.com/PedroBarbosa/Prepare_SplicingPredictors"
repository = "https://github.com/PedroBarbosa/Prepare_SplicingPredictors"
documentation = "https://github.com/PedroBarbosa/Prepare_SplicingPredictors"

[project.license]
text = "https://opensource.org/licenses/GPL-3.0"

[project.scripts]
vcf2seq = "sequence_extractor:main"
